App Security/iisnode/ROBBIE-4260-stderr-1478093216970.txt
Application has thrown an uncaught exception and is terminated:
C:\Users\Rob\Documents\My Web Sites\App Security\server.js:1
(function (exports, require, module, __filename, __dirname) { import * as url from 'url';
                                                              ^^^^^^
SyntaxError: Unexpected token import
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (C:\Program Files (x86)\iisnode-dev\release\x86\interceptor.js:210:1)
    at Module._compile (module.js:570:32)
